fix wrong position and style

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -17,7 +17,6 @@
 
 .row {
     width: 100%;
-    margin-bottom: 20px;
     display: flex;
 }
 
