--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,87 +1,118 @@
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
 
-body{
+
+body {
     display:flex;
     flex-wrap: wrap;
+    margin: 5% 10%;
 }
 
-hr{
+hr {
     clear:both;
     border: 2px solid #7d97ad;
 
 }
 
-h1{
+h1 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 300;
     font-size: 64px;
     margin: 0;
 }
-h2{
+
+h2 {
     font-family: 'Work Sans', sans-serif;
-    font-weight: 700;
-    font-size: 30px;
-    color: black;
-    margin: 0;
-    text-align:center;
-}
-h3{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 35px;
     margin: 0;
-    padding: 10px;
 }
 
-h4{
+h3 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 700;
     font-size: 24px;
     margin: 0;
 }
-#logo{
+
+p {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+    color: white;
+    text-align: justify;
+    text-overflow: ellipsis;
+    overflow: scroll;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    margin: 0;
+    padding: 15px 30px;
+    position: absolute;
+    bottom: 0;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+a span {
+    text-align:center;
+    margin: 0 auto;
+    display: inline-block;
+    width: 100%;
+}
+
+#logo {
     display: inline;
     float: left;
 }
-#basic-info{
+
+#basic-info {
     display: inline;
     float: right;
     text-align: right;
     padding: 12px 0;
 }
 
-.work-picture{
-    float:left;
-    width: calc((100vw - 60px)/3);
-    margin: auto;
-    margin-right: 30px;
-}
-.work-picture:last-of-type{
-    margin-right: 0;
+#master {
+    margin: 2% 0;
+    position: relative;
 }
 
-.link{
+.float-right {
+    float: right;
+}
+
+.lightblue {
+    color: #02b3e4;
+}
+
+.darkgrey {
+    color: #2d3c49;
+}
+
+.grey {
+    color: #7d97ad;
+}
+
+.link {
     text-decoration: none;
-}
-.float-right{
-    float:right;
-}
-
-.lightblue{
-    color:#02b3e4;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
 }
 
-.darkgrey{
-    color:#2d3c49;
+.work {
+    width: calc((100% - 6%)/3);
+    margin-right: 3%;
 }
 
-.grey{
-    color:#7d97ad;
-}
-
-.work{
-    width:33.33%;
+li.work:last-of-type {
+    margin-right: 0;
 }
